# Philo

./: .gitignore  .gitognore  CMakeLists.txt  Makefile  philo
include/: philo.h
philo/: .gitognore  Makefile  philo
philo/src/: main.c  meal.c  take.c  threads.c  utils.c  validation.c
philo_bonus/: .gitignore  Makefile
philo_bonus/include/: philo.h
philo_bonus/src/: checker.c  init.c  main.c  meal.c  sleep.c  sleep_think.c  take.c  validation.c
src/: checker.c  init.c  main.c  meal.c  take.c  threads.c  utils.c  validation.c
